--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     compile("org.springframework.boot:spring-boot-starter-web")
+    runtimeOnly 'com.h2database:h2'
+
 }
 
 test {
